--- a/.env
+++ b/.env
@@ -20,3 +20,10 @@ LOGGER_LEVEL=debug
 
 SWAGGER_HOST=localhost
 SWAGGER_PORT=8093
+
+REFRESH_TOKEN_SECRET_KEY=golang-is-very-cool
+REFRESH_TOKEN_EXP=30      #minutes
+ACCESS_TOKEN_SECRET_KEY=golang-is-incredible
+ACCESS_TOKEN_EXP=5        #minutes
+
+USER_ENDPOINTS=/api/user
