Add Buy function

--- a/.env
+++ b/.env
@@ -24,6 +24,6 @@ SWAGGER_PORT=8093
 REFRESH_TOKEN_SECRET_KEY=golang-is-very-cool
 REFRESH_TOKEN_EXP=30      #minutes
 ACCESS_TOKEN_SECRET_KEY=golang-is-incredible
-ACCESS_TOKEN_EXP=5        #minutes
+ACCESS_TOKEN_EXP=50        #minutes
 
-USER_ENDPOINTS=/api/user
+USER_ENDPOINTS=/api/user, /api/buy/:item
