Написал юнит-тесты для бизнес-логики

--- a/.env
+++ b/.env
@@ -26,4 +26,4 @@ REFRESH_TOKEN_EXP=30      #minutes
 ACCESS_TOKEN_SECRET_KEY=golang-is-incredible
 ACCESS_TOKEN_EXP=50        #minutes
 
-USER_ENDPOINTS=/api/user, /api/buy/:item
+USER_ENDPOINTS=/api/buy/:item,/api/sendCoin,/api/info
