--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,15 @@ services:
     env_file:
       - .env 
 
+  # Сервис для тестирования
+  postgres_test:
+    container_name: test_DB
+    image: postgres:14-alpine
+    environment:
+      POSTGRES_DB: avito_test
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_password
+    ports:
+      - "5433:5432"
 volumes:
   postgres_volume_local:
