--- a/.env
+++ b/.env
@@ -3,8 +3,17 @@ DB_USER=postgres
 DB_PASSWORD=password
 DB_PORT=5432
 DB_PORT_INTERNAL=5432
-# DB_HOST=db
-DB_HOST=localhost
+DB_HOST=db
+
+# Тестовы данные
+# DB_DB=avito_test
+# DB_USER=test_user
+# DB_PASSWORD=test_password
+# DB_PORT=5432
+# DB_PORT_INTERNAL=5432
+# DB_HOST=DB_Test
+# MIGRATION_DIR=/migrations
+# MIGRATION_HOST=DB_Test
 
 MIGRATION_DIR=/migrations
 MIGRATION_HOST=db
@@ -12,18 +21,18 @@ MIGRATION_HOST=db
 PG_DSN="host=${DB_HOST} port=${DB_PORT_INTERNAL} dbname=${DB_DB} user=${DB_USER} password=${DB_PASSWORD} sslmode=disable"
 MIGRATION_DSN="host=${MIGRATION_HOST} port=${DB_PORT_INTERNAL} dbname=${DB_DB} user=${DB_USER} password=${DB_PASSWORD} sslmode=disable"
 
-HTTP_HOST=localhost
+HTTP_HOST=app
 HTTP_PORT=8080
 
-LOGGER_LEVEL=debug
-# LOGGER_LEVEL=info
+# LOGGER_LEVEL=debug
+LOGGER_LEVEL=info
 
-SWAGGER_HOST=localhost
+SWAGGER_HOST=app
 SWAGGER_PORT=8093
 
 REFRESH_TOKEN_SECRET_KEY=golang-is-very-cool
 REFRESH_TOKEN_EXP=30      #minutes
 ACCESS_TOKEN_SECRET_KEY=golang-is-incredible
-ACCESS_TOKEN_EXP=50        #minutes
+ACCESS_TOKEN_EXP=5        #minutes
 
 USER_ENDPOINTS=/api/buy/:item,/api/sendCoin,/api/info
