--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  # Сервис для приложения
+  app:
+    container_name: AvitoShop
+    build:
+      context: . 
+      dockerfile: Dockerfile
+    ports:
+      - "${HTTP_PORT}:${HTTP_PORT}" 
+      - "${SWAGGER_PORT}:${SWAGGER_PORT}" 
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: always
+
   # Сервис для PostgreSQL
   db:
     container_name: postgres
@@ -34,7 +48,7 @@ services:
       - .env 
 
   # Сервис для тестирования
-  postgres_test:
+  DB_Test:
     container_name: test_DB
     image: postgres:14-alpine
     environment:
@@ -43,5 +57,6 @@ services:
       POSTGRES_PASSWORD: test_password
     ports:
       - "5433:5432"
+      
 volumes:
   postgres_volume_local:
