--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -22,7 +22,7 @@ jobs:
           run: go build -o ./bin/ -v ./...
 
         - name: Test
-          run: go test -v ./...
+          run: go test -v ./internal/tests/unit_tests/...
 
   linter:
     name: lint
