--- a/.golangci.pipeline.yaml
+++ b/.golangci.pipeline.yaml
@@ -5,7 +5,9 @@ run:
   tests: true
 
 output:
-  formats: colored-line-number
+  formats:
+    - format: "colored-line-number"
+      style: "compact"
   print-issued-lines: true
   print-linter-name: true
 
