Добавил использование Prometheus и Grafana для метрик

--- a/.env
+++ b/.env
@@ -36,3 +36,6 @@ ACCESS_TOKEN_SECRET_KEY=golang-is-incredible
 ACCESS_TOKEN_EXP=5        #minutes
 
 USER_ENDPOINTS=/api/buy/:item,/api/sendCoin,/api/info
+
+PROMETHEUS_HOST=app
+PROMETHEUS_PORT=2112
