--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,8 @@
+volumes:
+  postgres_volume_local:
+  prometheus_data:
+  grafana_data:
+
 services:
   # Сервис для приложения
   app:
@@ -8,6 +13,7 @@ services:
     ports:
       - "${HTTP_PORT}:${HTTP_PORT}" 
       - "${SWAGGER_PORT}:${SWAGGER_PORT}" 
+      - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
     depends_on:
       db:
         condition: service_healthy
@@ -58,5 +64,22 @@ services:
     ports:
       - "5433:5432"
       
-volumes:
-  postgres_volume_local:
+  # Сервис для сбора метрик
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:v2.37.9
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./alerts.yml:/etc/prometheus/alerts.yml
+      - prometheus_data:/prometheus
+
+  # Сервис для отображения метрик 
+  grafana:
+    container_name: grafana
+    image: grafana/grafana-oss:10.0.3
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
